--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ hide_change: hidden
   <div class="one-box3">
     <div class="one-box3-inner">
       <i class="fab fa-canadian-maple-leaf icon"></i> <h2>Latest News</h2> <i class="fab fa-canadian-maple-leaf icon"></i>
+      <blockquote class="twitter-tweet tw-align-center"><p lang="und" dir="ltr"><a href="https://t.co/uTTHfjJSQe">https://t.co/uTTHfjJSQe</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1180686317727780864?ref_src=twsrc%5Etfw">October 6, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">One final candidate added to the ballot in Nanaimo-Ladysmith <a href="https://t.co/T5d8ILaVPa">https://t.co/T5d8ILaVPa</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1179944395140763648?ref_src=twsrc%5Etfw">October 4, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
