--- a/index.html
+++ b/index.html
@@ -21,13 +21,10 @@ homeActive: ew-active
           <div class="row">
             <div class="col-md-6">
               <h1 class="caption-headline">
-              Echo White
+                  Echo Your Voice in Parliament
               </h1>
               <h4 class="caption-subheadline ew-bold">
               Independent Candidate
-              </h4>
-              <h4 class="caption-subheadline ew-bold-sm">
-                  Not Left Not Right
               </h4>
               <h4 class="caption-subheadline ew-district">
                   Nanaimo-Ladysmith, BC
