More voting info.

--- a/vote.html
+++ b/vote.html
@@ -76,6 +76,21 @@ hide_change: hidden
           </li>
         </ul>
 
+        综上所述，如果至今仍未收到选民信息卡的加拿大公民， 就只能在所属选区的选举总部投票，选区内的其它投票站不能接受没有选民信息卡的选民。因此建议抓紧时间在10月15日下午6点之前到所属选区的选举总部投票。从10月15日下午6点到10月21日早上7点期间，全国的投票站和选举办公室都暂停开放。我们今天在Nanaimo-Ladysmith选区的选举总部看到一个没有选民信息卡的选民前来投票。从核实选民资格到完成投票，全程只花了不到五分钟。
+        <br/><br/>
+
+        各地选举办公室的详细地址可以登入elections.ca 凭自己住址的邮编查找。
+        <br/>
+
+        以下是Nanaimo-Ladysmith选区的详细介绍:<br/>
+        选举总部地址:<br/>
+        Nanaimo North Town Centre 北门（在Lowe's的旁边）<br/>
+
+        4750 Rutherford Road, Suite 195<br/>
+        Nanaimo, British Columbia V9T 4K6<br/>
+        <br/>
+        查询电话 : 1 866 545-0624<br/>
+
       </div>
     </div>
   </div>
