--- a/vote.html
+++ b/vote.html
@@ -89,7 +89,9 @@ hide_change: hidden
         4750 Rutherford Road, Suite 195<br/>
         Nanaimo, British Columbia V9T 4K6<br/>
         <br/>
-        查询电话 : 1 866 545-0624<br/>
+        查询电话 : 1 866 545-0624<br/><br/>
+
+        免责声明:以上提供的内容可能有疏漏，仅供参考。 一切以Elections Canada公布的信息为准。
 
       </div>
     </div>
