Added donate link.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ homeActive: ew-active
                 </p>
               </div>
               <a href="about.html" class="button1 firstcolor small">About me</a>
+              <a href="donate.html" class="button1 secondcolor small">Donate</a>
             </div>
           </div>
         </div>
