--- a/news.html
+++ b/news.html
@@ -33,6 +33,9 @@ hide_change: hidden
   <div class="container">
     <div class="row">
       <div class="col-md-6">
+          <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">Time Colonist coverage of my profile.<a href="https://t.co/RDqzsOSPPm">https://t.co/RDqzsOSPPm</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1183052009181609985?ref_src=twsrc%5Etfw">October 12, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+      <div class="col-md-6">
         <blockquote class="twitter-tweet tw-align-center"><p lang="und" dir="ltr"><a href="https://t.co/uTTHfjJSQe">https://t.co/uTTHfjJSQe</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1180686317727780864?ref_src=twsrc%5Etfw">October 6, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
       <div class="col-md-6">
