--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ hide_change: hidden
           </li>
           <li>
             <i class="fab fa-canadian-maple-leaf icon"></i>
-            As an entrepreneur for more than twenty years, I was a member of the Team Canada Trade Mission to promote large project overseas for Canada.
+            As a high-tech entrepreneur for more than twenty years, I was a member of the Team Canada Trade Mission to promote large project overseas for Canada.
           </li>
           <li>
           <i class="fab fa-canadian-maple-leaf icon"></i>
