--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ hide_change: hidden
           <div class="divider-space">
             </div>
             <p class="ew-intro">
-            I see and experience many concerns, frustrations and pain about health care, education, housing, drug, homeless, and the situation of First Nation people. But we lack a voice in Ottawa to represent our concerns, as the political parties put their interest above ours. I will passionately and tireless voice your concerns in Parliament as an independent MP.
+            I see and experience many concerns, frustrations and pain about health care, education, housing, drug, homeless, and the situation of First Nations people. But we lack a voice in Ottawa to represent our concerns, as the political parties put their interest above ours. I will passionately and tireless voice your concerns in Parliament as an independent MP.
             </p>
         </p>
         <ul class="ul-list ew-intro">
