--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ homeActive: ew-active
                 </p>
               </div>
               <a href="about.html" class="button1 firstcolor small">About me</a>
-              <a href="donate.html" class="button1 secondcolor small">Donate</a>
+              <a href="https://echomyvoice.ca" class="button1 secondcolor small">Movement</a>
+              <a href="donate.html" class="button1 firstcolor small">Donate</a>
             </div>
           </div>
         </div>
