Added volunteer page.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ homeActive: ew-active
               </div>
               <a href="about.html" class="button1 firstcolor small">About me</a>
               <a href="https://echomyvoice.ca" class="button1 secondcolor small">Movement</a>
-              <a href="donate.html" class="button1 firstcolor small">Donate</a>
+              <a href="volunteer.html" class="button1 firstcolor small">Volunteer</a>
             </div>
           </div>
         </div>
