--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@ hide_change: hidden
           As a first-generation Asian immigrant, I speaks fluent English, Mandarin, and Cantonese and will be an enthusiastic ambassador of Nanaimo to the world.
           </li>
         </ul>
+        <a href="more_about.html" class="button1 secondcolor small">More About Me</a>
       </div>
     </div>
   </div>
