First french version

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ homeActive: ew-active
       <div class="flex-caption flex-caption1">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 en">
               <h1 class="caption-headline">
                   Echo Your Voice in Parliament
               </h1>
@@ -43,6 +43,30 @@ homeActive: ew-active
               <a href="https://echomyvoice.ca" class="button1 secondcolor small">Movement</a>
               <a href="volunteer.html" class="button1 firstcolor small">Volunteer</a>
             </div>
+            <div class="col-md-6 fr">
+              <h1 class="caption-headline">
+                Écho Votre Voix Au Parlemen
+              </h1>
+              <h4 class="caption-subheadline ew-bold">
+                Candidat Indépendant
+              </h4>
+              <h4 class="caption-subheadline ew-district">
+                  Nanaimo-Ladysmith, BC
+              </h4>
+              <div class="caption-list">
+                <p>
+                <i class="fab fa-canadian-maple-leaf icon"></i>
+                Consacré à faire revivre notre belle ville
+                </p>
+                <p>
+                <i class="fab fa-canadian-maple-leaf icon"></i>
+                Servir les gens, pas les partis politiques
+                </p>
+              </div>
+              <a href="about.html" class="button1 firstcolor small">A Propos de moi</a>
+              <a href="https://echomyvoice.ca" class="button1 secondcolor small">Movement</a>
+              <a href="volunteer.html" class="button1 firstcolor small">Volunteer</a>
+            </div>
           </div>
         </div>
       </div>
@@ -54,12 +78,18 @@ homeActive: ew-active
 <div class="wrapper100percent">
 <div class="main-boxes">
   <div class="one-box1">
-    <div class="one-box1-inner">
+    <div class="one-box1-inner en">
       <i class="fab fa-canadian-maple-leaf icon"></i> <h2>Why I Run</h2> <i class="fab fa-canadian-maple-leaf icon"></i>
       <p>
-      Nanaimo is a beautiful harbor city with talented, creative and welcoming people. I love this city and want to have the honour to represent you. My passion is to transform the region long ignored by the political parties into an innovation centre of Canada. As an MP with a strong background in the high tech industry, I will fight for more tax incentives and training programs to attract businesses and investments, which will increase local employment in all sectors. I see a revival coming to Nanaimo soon.
+          Nanaimo is a beautiful harbor city with talented, creative and welcoming people. I love this city and want to have the honour to represent you. My passion is to transform the region long ignored by the political parties into an innovation centre of Canada. As an MP with a strong background in the high tech industry, I will fight for more tax incentives and training programs to attract businesses and investments, which will increase local employment in all sectors. I see a revival coming to Nanaimo soon.
       </p>
     </div>
+    <div class="one-box1-inner fr">
+        <i class="fab fa-canadian-maple-leaf icon"></i> <h2>Pourquoi Je Cours</h2> <i class="fab fa-canadian-maple-leaf icon"></i>
+        <p>
+          Nanaimo est une belle ville portuaire avec des gens talentueux, créatifs et accueillants. J'aime cette ville et je veux avoir l'honneur de vous représenter. Ma passion est de transformer la région longtemps ignorée par les partis politiques en un centre d'innovation du Canada. En tant que député ayant une solide expérience dans le secteur de la haute technologie, je me battrai pour davantage d'incitations fiscales et de programmes de formation afin d'attirer les entreprises et les investissements, ce qui permettra de créer des emplois locaux dans tous les secteurs. Je vois bientôt un réveil à Nanaimo.
+        </p>
+      </div>
   </div>
 </div>
 </div>
@@ -67,8 +97,13 @@ homeActive: ew-active
 <div class="wrapper100percent">
 <div class="main-boxes">
   <div class="one-box3">
-    <div class="one-box3-inner">
+    <div class="one-box3-inner en">
       <i class="fab fa-canadian-maple-leaf icon"></i> <h2>Latest News</h2> <i class="fab fa-canadian-maple-leaf icon"></i>
+      <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">Time Colonist coverage of my profile.<a href="https://t.co/RDqzsOSPPm">https://t.co/RDqzsOSPPm</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1183052009181609985?ref_src=twsrc%5Etfw">October 12, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">One final candidate added to the ballot in Nanaimo-Ladysmith <a href="https://t.co/T5d8ILaVPa">https://t.co/T5d8ILaVPa</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1179944395140763648?ref_src=twsrc%5Etfw">October 4, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="one-box3-inner fr">
+      <i class="fab fa-canadian-maple-leaf icon"></i> <h2>Dernières Nouvelles</h2> <i class="fab fa-canadian-maple-leaf icon"></i>
       <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">Time Colonist coverage of my profile.<a href="https://t.co/RDqzsOSPPm">https://t.co/RDqzsOSPPm</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1183052009181609985?ref_src=twsrc%5Etfw">October 12, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">One final candidate added to the ballot in Nanaimo-Ladysmith <a href="https://t.co/T5d8ILaVPa">https://t.co/T5d8ILaVPa</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1179944395140763648?ref_src=twsrc%5Etfw">October 4, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
