--- a/about.html
+++ b/about.html
@@ -11,8 +11,11 @@ hide_change: hidden
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <div class="mainheadlinepage">
+        <div class="mainheadlinepage en">
           <h1>About me</h1>
+        </div>
+        <div class="mainheadlinepage fr">
+            <h1>À Propos De Moi</h1>
         </div>
       </div>
     </div>
