--- a/news.html
+++ b/news.html
@@ -12,7 +12,8 @@ hide_change: hidden
     <div class="row">
       <div class="col-sm-12">
         <div class="mainheadlinepage">
-          <h1>News</h1>
+          <h1 class="en">News</h1>
+          <h1 class="fr">Nouvelles</h1>
         </div>
       </div>
     </div>
