--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,8 @@ hide_change: hidden
     <div class="row">
       <div class="col-sm-12">
         <div class="mainheadlinepage">
-          <h1>Gallery</h1>
+          <h1 class="en">Gallery</h1>
+          <h1 class="fr">Galerie</h1>
         </div>
       </div>
     </div>
