--- a/news.html
+++ b/news.html
@@ -35,7 +35,7 @@ hide_change: hidden
     <div class="row">
         <div class="col-md-6 text-center">
           <h3>Thank you all for your support!</h3>
-          <img src="images/result.png"/>
+          <img src="images/result.jpg"/>
         </div>
       <div class="col-md-6">
           <blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">Time Colonist coverage of my profile.<a href="https://t.co/RDqzsOSPPm">https://t.co/RDqzsOSPPm</a></p>&mdash; Echo White (@EchoWhiteVI) <a href="https://twitter.com/EchoWhiteVI/status/1183052009181609985?ref_src=twsrc%5Etfw">October 12, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
