--- a/_donate_.html
+++ b/_donate_.html
@@ -1,7 +1,7 @@
 ---
 layout: layout.liquid
 title: Echo White for Nanaimo
-permalink: donate.html
+permalink: _donate_.html
 donateActive: ew-active
 hide_change: hidden
 ---
